# sequence-handler

./: .gitignore  README.md  pyproject.toml
config/: fixed_sequences.yaml
query/: test_1.fastq  test_2.fastq
scripts/: create_db.py  filter_query.py  populate_db.py
sequencehandler/: cli.py  config.py  create_db.py  filter_query.py  main.py  output_db.py  populate_db.py  update_db.py
tests/: test_filter_query.py
tests/query/match/: query_matches.fastq
tests/query/not_match/: query_not_matches.fastq
